# CNT-Lab

./: .env.example  .gitignore  CNT_Engine_MegaCell_SSD.ipynb  CNT_LAWS_CONSTITUTION_v1.md  README.md  Untitled.ipynb  cnt_engine_megacell.py  pyproject.toml  requirements.txt
artifacts_vector_embedding/: default__vector_store.json  docstore.json  index_store.json
cnt_flashproof_artifacts/: flashproof_20251030-195448Z_614af6b5_prereg.md  flashproof_20251030-195448Z_614af6b5_prereg_locked.md  flashproof_20251030-195448Z_614af6b5_score.json  flashproof_20251031-001830Z_709ef451_prereg.md  flashproof_20251031-001830Z_709ef451_prereg_locked.md  flashproof_20251031-001830Z_709ef451_score.json  flashproof_20251031-002928Z_1cdb0dce_prereg.md  flashproof_20251031-002928Z_1cdb0dce_prereg_locked.md  flashproof_20251031-002928Z_1cdb0dce_score.json  flashproof_20251031-003727Z_21f4e575_prereg.md  flashproof_20251031-003727Z_21f4e575_prereg_locked.md  flashproof_20251031-003727Z_21f4e575_score.json  flashproof_20251031-004137Z_3b3b199d_prereg.md  flashproof_20251031-004137Z_3b3b199d_prereg_locked.md  flashproof_20251031-004137Z_3b3b199d_score.json  flashproof_20251031-004602Z_eaf1aa56_prereg.md  flashproof_20251031-004602Z_eaf1aa56_prereg_locked.md  flashproof_20251031-004602Z_eaf1aa56_score.json  flashproof_20251031-005012Z_d522d103_prereg.md  flashproof_20251031-005012Z_d522d103_prereg_locked.md  flashproof_20251031-005012Z_d522d103_score.json  flashproof_20251031-005316Z_d1c9040e_prereg.md  flashproof_20251031-005316Z_d1c9040e_prereg_locked.md  (+11 more)
cnt_omega_proof_skeleton/: LICENSE  (+3 more)
(+294 files in other folders)
